--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1> hello {{ numero + 2}}</h1>
 <p> Add {{ sum(3,5)}}</p>
-
 <!-- <p> Subtract {{ subtract(9,5)}}-->
+<p> Get Evens Numers {{ getEvenArray()}}</p>
