--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <p> Add {{ sum(3,5)}}</p>
 <!-- <p> Subtract {{ subtract(9,5)}}-->
 <p> Get Evens Numers {{ getEvenArray()}}</p>
+<user-card [name]="'MArco polo'" [email]="'marcopolo@mc.com'"></user-card>
