--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<h1> hello {{ numero + 2}}</h1>
-<p> Add {{ sum(3,5)}}</p>
+<h1>hello {{ numero + 2 }}</h1>
+<p>Add {{ sum(3, 5) }}</p>
 <!-- <p> Subtract {{ subtract(9,5)}}-->
-<p> Get Evens Numers {{ getEvenArray()}}</p>
-<user-card [name]="'MArco polo'" [email]="'marcopolo@mc.com'"></user-card>
+<p>Get Evens Numers {{ getEvenArray() }}</p>
+
+<user-card 
+    name="MArco polo" 
+    [email]="'marcopolo@mc.com'"
+    (sendData)="receiveData($event)">
+</user-card>
