--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,4 +1,8 @@
-<p>user-card works!</p>
+<div class="user-card">
+  <p>user-card works!</p>
 
-<p> INPUT name: {{ name}}</p>
-<p> INPUT email:{{ email}} </p>
+  <p>INPUT name: {{ name }}</p>
+  <p>INPUT email:{{ email }}</p>
+
+  <button (click)="onSendData()"> boton</button>
+</div>
