[26-09-24] Create calculator component and added history

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,9 @@
     [email]="'marcopolo@mc.com'"
     (sendData)="receiveData($event)">
 </user-card>
+<p> Result: {{result}}</p>
+<calculator
+(sum)="onResult($event)"
+(mul)="onResult($event)"
+(reset)="onResult($event)"
+></calculator>
