--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,9 @@
 (mul)="onResult($event)"
 (reset)="onResult($event)"
 ></calculator>
+
+<p *ngIf="1=== 1"> variables are equals</p>
+
+@if(1 === 1){
+    <p> new Sintax, variables are equals</p>
+}
