--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,3 +20,23 @@
 @if(1 === 1){
     <p> new Sintax, variables are equals</p>
 }
+
+<p *ngFor="let item of ['a', 'b', 'c', 'd']; let i = index">
+    old for, value {{item}}, index {{i}}
+</p>
+
+@for(item of ['a', 'b', 'c', 'd']; track item){
+    <p>New Syntax Student: {{item}}</p>
+}
+
+<div [ngSwitch]="var1">
+    <p *ngSwitchCase="0"> var is 0</p>
+    <p *ngSwitchCase="1"> var is 1</p>
+    <p *ngSwitchDefault> default value</p>
+</div>
+
+@switch (var1) {
+    @case (0) { <p>new syntax, var is 0</p>}
+    @case (1) { <p>new syntax, var is 1</p>}
+    @default { <p>new syntax, default</p> }
+}
