--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -5,6 +5,7 @@
   <p>INPUT email:{{ email }}</p>
 
   <button (click)="onSendData()"> boton</button>
+  <p>PASSWORD = {{password}}</p>
 
   <ng-content></ng-content>
 </div>
