--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -4,6 +4,9 @@
   <p>INPUT name: {{ name }}</p>
   <p>INPUT email:{{ email }}</p>
 
+  <input type="text" [(ngModel)]="password">
+
+
   <button (click)="onSendData()"> boton</button>
   <p>PASSWORD = {{password}}</p>
 
