--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -7,7 +7,7 @@
   <input type="text" [(ngModel)]="password">
 
 
-  <button (click)="onSendData()"> boton</button>
+  <button #buttonTest (click)="onSendData()">send Data</button>
   <p>PASSWORD = {{password}}</p>
 
   <ng-content></ng-content>
