--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,5 +1,7 @@
-<div class="user-card">
-  <p>user-card works!</p>
+<div [ngClass]="{
+  'user-card': password === '123',
+  'user-card-black': password === 'hola' 
+}">
 
   <p>INPUT name: {{ name }}</p>
   <p>INPUT email:{{ email }}</p>
