[07-10-2024] ngStyle and NgModule

--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -2,7 +2,10 @@
   'user-card': password === '123',
   'user-card-black': password === 'hola' 
 }">
+  <p [ngStyle]="{
+    'background-color': password === 'red' ? 'red': 'yellow',
 
+  }">USER CARD COMPONENT</p>
   <p>INPUT name: {{ name }}</p>
   <p>INPUT email:{{ email }}</p>
 
