--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
+<user-card 
+    name="MArco polo" 
+    [email]="'marcopolo@mc.com'"
+    (sendData)="receiveData($event)">
+</user-card>
 
-<div class="user_page"> 
+<!--<div class="user_page"> 
     <div class="list">
         @for(person of list_people; track person){
             <person-card 
@@ -41,15 +46,11 @@
 
 <h1>hello {{ numero + 2 }}</h1>
 <p>Add {{ sum(3, 5) }}</p>
-<!-- <p> Subtract {{ subtract(9,5)}} -->
+<!-- <p> Subtract {{ subtract(9,5)}} ->
 
 <p>Get Evens Numers {{ getEvenArray() }}</p>
 
-<user-card 
-    name="MArco polo" 
-    [email]="'marcopolo@mc.com'"
-    (sendData)="receiveData($event)">
-</user-card>
+
 <p> Result: {{result}}</p>
 <calculator
 (sum)="onResult($event)"
@@ -87,3 +88,4 @@
 <counter></counter>
 <button (click)="var1 = var1 + 1"> Increment Var1 </button>
 <p>{{ var1 }}</p>
+-->
