[08-10-2024] observables first example, concept

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     [email]="'marcopolo@mc.com'"
     (sendData)="receiveData($event)">
 </user-card>
+<button (click)="addVideo()">add new video to youtube</button>
 
 <!--<div class="user_page"> 
     <div class="list">
