--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="card"
+ [ngStyle]="getBackgroundStyle()">
     @switch (type_card) {
         @case ("personal") {
             <p>
@@ -23,7 +24,7 @@
         }
         @case ("geographic") {
             <p>
-                Address: {{person.address}}
+                Address: {{person.address.number}}# {{person.address.street}} {{person.address.zone}}
             </p>
             <p>
                 Country: {{person.country}}
@@ -35,13 +36,25 @@
         }
 
         @case ("messages") {
-            <search></search>
-            @for (message of person.messages; track $index) {
+            <search (search)="onSearch($event)"></search>
+            @for (message of messages!; track $index) {
                 <item
                  [information]="getInformation(message)"
                  [type_item]="'type-message'"
                  ></item>
             }
+        }
+        @default {
+            <p>
+                Name: ""
+            </p>
+            <p>
+                LastName: ""
+            </p>
+            <p>
+                Type: ""
+            </p>
+    
         }
 
     }
