--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -2,7 +2,7 @@
     display: flex;
     padding: 2px;
     margin: 4px;
-    width: 40%;
+    width: 400px;
     flex-direction: row;
     justify-content: space-around ;
     border: 2px solid;
