--- a/src/app/notification/notification.component.css
+++ b/src/app/notification/notification.component.css
@@ -1,43 +1,26 @@
 .notifications-container {
-    border: 1px solid #ccc;
-    padding: 20px;
-    width: 300px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .tabs {
-    display: flex;
-    margin-bottom: 20px;
-  }
-  
-  .tab {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    text-align: center;
-  }
-  
-  .tab.active {
-    background-color: #ddd;
-  }
-  
-  .notification {
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  .notification.youtube {
-    background-color: #ffd6d6;
-  }
-  
-  .notification.tiktok {
-    background-color: #d6caff;
-  }
-  
-  .notification.whatsapp {
-    background-color: #ccffcc;
-  }
-  
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-top: 10px;
+  background-color: #f9f9f9;
+  width: 300px;
+}
+
+.notification {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.notification.youtube {
+  background-color: #ffd6d6;
+}
+
+.notification.tiktok {
+  background-color: #d6caff;
+}
+
+.notification.whatsapp {
+  background-color: #ccffcc;
+}
