--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -3,6 +3,8 @@
     padding: 20px;
     width: 300px;
     font-family: Arial, sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   
   .tabs {
