--- a/src/app/social/social.component.css
+++ b/src/app/social/social.component.css
@@ -1,8 +1,8 @@
 .social-actions-container {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
+  justify-content: center;
 }
 
 .action {
@@ -17,6 +17,8 @@
   border: 1px solid #000;
   background-color: #fff;
   cursor: pointer;
+  border-radius: 5px; 
+  font-size: 12px;
 }
 
 .social-card {
@@ -31,10 +33,30 @@
   text-transform: capitalize;
 }
 
+.network.facebook {
+  background-color: #ffe6cc;
+}
+
+.network.whatsapp {
+  background-color: #ccffcc;
+}
+
+.network.youtube {
+  background-color: #ffd6d6;
+}
+
+.network.instagram {
+  background-color: #cce5ff;
+}
+
+.network.tiktok {
+  background-color: #d6caff;
+}
+
 .premium-star {
   position: absolute;
   top: 5px;
-  right: 5px;
+  left: 5px;
   color: gold;
   font-size: 16px;
 }
