--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,20 @@
 <button type="button" class="btn btn-link">Link</button>
 <p>NAVIGATION </p>
 <button type="button" class="btn btn-light" [routerLink]="['card', 8]">User Card param 8</button>
-<button type="button" class="btn btn-light" (click)="goToCard()">User Card param 1</button><button type="button" class="btn btn-dark" [routerLink]="'/cal'">Calculator</button>
-<button type="button" class="btn btn-warning" [routerLink]="'/counter-nav'">Counter</button>
+<button type="button" class="btn btn-light" (click)="goToCard()">User Card param 1</button>
+<button 
+type="button" 
+class="btn btn-dark" 
+[routerLink]="'/cal'" 
+[queryParams]="{ name: 'test',  lastName: 'perez'}">
+Calculator QP from HTML
+</button>
+<button 
+type="button" 
+class="btn btn-dark"
+(click)="onCalculator()">
+Calculator QP from TS
+</button><button type="button" class="btn btn-warning" [routerLink]="'/counter-nav'">Counter</button>
 <button type="button" class="btn btn-success" [routerLink]="'/student/score'">Student Module / score</button>
 <button type="button" class="btn btn-success" [routerLink]="'/student/classmate'">Student Module / classmate</button>
 <button type="button" class="btn btn-secondary" (click)="goToStudentModule()"> from TS to Student Module </button>
